--- a/ReadersAccountingClient/Forms/AddBookForm.resx
+++ b/ReadersAccountingClient/Forms/AddBookForm.resx
@@ -135,4 +135,88 @@
   <metadata name="dimBookTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>508, 22</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAQAEBAQAAEABAAoAQAARgAAABAQAAABAAgAaAUAAG4BAAAgIBAAAQAEAOgCAADWBgAAICAAAAEA
+        CACoCAAAvgkAACgAAAAQAAAAIAAAAAEABAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAB4AACAAACA
+        AAAAgICZgAAAB4AAgACAgAAAwMDAmYCAgJAAAP8AAP8AAAD//5n/AACZ/wD/AP//AAD///+ZAAAAAAAA
+        AAAAAAAAAAAAAAAAAAABAAAAAAAACZEAAAAAAAmZkQAAAAAAmZmRAAAAAACZmZEAAAAAAJmZkQAAAAAA
+        mZmRAAAAAACZmZEAAAAAAJmZAAAAAAAAmQAIgAAAAAAACIAAAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD//wU5/4////4D/4/4Af4D4AH4AeAD4AHgB+AD4AfgB+AH4AfgB+AH4AfgB+AH4AfgD+AH8D/gD/D/
+        8D////D/KAAAABAAAAAgAAAAAQAIAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAP///wDM//8Amf//AGb/
+        /wAz//+AAP//gP/M/4DMzP/Amcz/gGbM/wAzzP8AAMz/AP+Z///Mmf//mZn//2aZ//8zmf8AAJn/AP9m
+        /wDMZv8AmWb/AGZm/wEzZv8AAGb/kf8z/wDMM/+RmTP/AGYz/5EzM/8AADP/kf8A/wDMAP+RmQD/AGYA
+        /5EzAP8AAAD/kf//zADM/8wAmf/MAGb/zAgz/8wAAP/MgP/MzADMzMwAmczMAGbMzAAzzMwAAMzMAP+Z
+        zP/Mmcz/mZnM/maZzPgzmczgAJnM4P9mzODMZszgmWbM4GZmzOAzZszgAGbM4P8zzODMM8zwmTPM8GYz
+        zP8zM8wAADPMAP8AzAXMAMwFmQDMmWYAzAAzAMwAAADMAP//mZnM/5kAmf+ZAGb/mQAz/5kAAP+ZAP/M
+        mQDMzJkAmcyZAGbMmQAzzJkAAMyZAP+ZmQDMmZkAmZmZAGaZmQAzmZkAAJmZAP9mmQDMZpkAmWaZAGZm
+        mQAzZpkFAGaZ6/8zmQDMM5kBmTOZAGYzmQAzM5kAADOZAP8AmQDMAJkAmQCZAWYAmQEzAJkBAACZAf//
+        ZgHM/2YBmf9mAWb/ZgEz/2YBAP9mAf/MZgHMzGYBmcxmAWbMZgEzzGYBAMxmAf+ZZgHMmWYAmZlmAGaZ
+        ZgAzmWYAAJlmAP9mZgDMZmYAmWZmAGZmZgAzZmYFAGZm6/8zZgDMM2YBmTNmAGYzZgAzM2YAADNmAP8A
+        ZgDMAGYAmQBmAGYAZoAzAGYAAABmgP//MwDM/zMAmf8zAGb/MwAz/zMAAP8zgP/MMwDMzDPAmcwzAGbM
+        M4AzzDMAAMwzAP+ZMwDMmTP/mZkzAGaZM/8zmTMAAJkzAP9mMwDMZjMAmWYzAGZmM/8zZjMAAGYz//8z
+        M+jMMzPkmTMzBWYzM+szMzMAADMzAf8AM//MADP/mQAz/2YAM/8zADP/AAAz////AP/M/wD/mf8A/2b/
+        AP8z/wD/AP8A///MAP/MzAD/mcwA/2bMAP8zzAD/AMwA//+ZAP/MmQD/mZkA/2aZAP8zmQD/AJkA//9m
+        AP/MZgD/mWYA/2ZmAP8zZgD/AGYA//8zAP/MMwD/mTMA/2YzAP8zMwD/ADMA+/8AAP/MAAD/mQAA/2YA
+        AP8zAAD/AADu/wAA3f8AALv5AACq3AAAiP8AAHf/AABV/wAARP8AACL/AAARHADuAPcA3QD3ALsA/wCq
+        AP8AiAD/AHcA/wBVAP8ARAAcACIA/wARAPnuAADc3QAA/7sAAP+qAAD/iAAA/3cAABxVAABHRAAA9yIA
+        APcRAAD/7u7u/93d3f+7u7v/qqqqHIiIiEd3d3f/VVVV+URERP8iIiL/ERER/wAAAP//////////////
+        ///////////////////////8/////////////////2v///z8////////////R0dr//3//Pz///////9H
+        R0dHa//8//z8//////9HR0dHR2v//P/8////////R0dHR0dr//z//////////0dHR0dHa//8////////
+        //9HR0dHR2v//f//////////R0dHR0dr//z//////////0dHR0f////8//////////9HR/////n5////
+        ////////////+fn////////////////9+///////////////////////////////////////////////
+        //////////8FOf+P///+A/+P+AH+A+AB+AHgA+AB4AfgA+AH4AfgB+AH4AfgB+AH4AfgB+AH4A/gB/A/
+        4A/w//A////w/ygAAAAgAAAAQAAAAAEABAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAD/AACAzACA
+        AJkAgIBmgAAAM4AAgACAgAD/wMDAzICAgJkAAP9mAP8AMwD//wD/AAD//wD/zP//AJn///9mAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAJEIAAAAAAAAAAAAAAAAAJmRCAAAAAAAAAAAAAAAAJmZkQgBAAAAAAAAAAAAAJmZmZEIAQAA
+        AAAAAAAAAJmZmZmRCAEAAAAAAAAAAJmZmZmZkQABAAAAAAAAAACZmZmZmZEIAQAAAAAAAAAAmZmZmZmR
+        CAEAAAAAAAAAAJmZmZmZkQABAAAAAAAAAACZmZmZmZEIAQAAAAAAAAAAmZmZmZmRCAEAAAAAAAAAAJmZ
+        mZmZkQgBAAAAAAAAAACZmZmZmZEAAQAAAAAAAAAAmZmZmZmRCAEAAAAAAAAAAJmZmZmZkQgBAAAAAAAA
+        AACZmZmZmZEAAQAAAAAAAAAAmZmZmZmQCAEAAAAAAAAAAJmZmZmQB3ABAAAAAAAAAACZmZmQB3iHcQAA
+        AAAAAAAAmZmQB3iHcRAAAAAAAAAAAJmQB3iHcRAAAAAAAAAAAACQB3iHcRAAAAAAAAAAAAAAAQiHcRAA
+        AAAAAAAAAAAAAAAQgRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//////////////////8H///8Af//8AB//8AAH/8AAA/8A
+        AAP+AAAH/gAAH/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4A
+        AP/+AAH//gAH//8AH///AH///4H//////////////////ygAAAAgAAAAQAAAAAEACAAAAAAAAAAAAAAA
+        AAAAAAAAAAEAAAAAAAD///8AzP//AJn//wBm//8AM///gAD//4D/zP+AzMz/wJnM/4BmzP8AM8z/AADM
+        /wD/mf//zJn//5mZ//9mmf//M5n/AACZ/wD/Zv8AzGb/AJlm/wBmZv8AM2b/AABm/wD/M/8AzDP/AJkz
+        /wBmM/8AMzP/AAAz/wD/AP8AzAD/AJkA/wBmAP8AMwD/AAAA/wD//8wAzP/MAJn/zJlm/8wAM//MAAD/
+        zAD/zMyZzMzMAJnMzABmzMwAM8zMmQDMzAD/mcwAzJnMAJmZzJlmmcwAM5nMAACZzJn/ZsyZzGbMAJlm
+        zABmZsyZM2bMmQBmzAD/M8wAzDPMmZkzzJlmM8wAMzPMAAAzzJn/AMyZzADMAJkAzABmAMyZMwDMmQAA
+        zAD//5kAzP+ZmZn/mZlm/5kAM/+ZAAD/mZn/zJmZzMyZAJnMmQBmzJmZM8yZmQDMmQD/mZkAzJmZmZmZ
+        mZlmmZkAM5mZAACZmZn/ZpmZzGaZAJlmmQBmZpmZM2aZmQBmmQD/M5kAzDOZmZkzmZlmM5kAMzOZAAAz
+        mZn/AJmQzACZAJkAmQBmAJmZMwCZBwAAmQD//2YAzP9mmZn/Znhm/2YAM/9mAAD/Zpn/zGaHzMxmAJnM
+        ZgBmzGaQM8xmcQDMZgD/mWYAzJlmAZmZZhBmmWYAM5lmAACZZgD/ZmYAzGZmAJlmZgBmZmYAM2ZmAABm
+        ZgD/M2YAzDNmAJkzZgBmM2YAMzNmAAAzZgD/AGYAzABmAJkAZgBmAGYAMwBmAAAAZgD//zP/zP8z/5n/
+        M/9m/zP/M/8z/wD/M///zDP/zMwz/5nMM/9mzDP+M8wz/gDMM/7/mTP+zJkz/pmZM/5mmTP+M5kz/gCZ
+        M/7/ZjP+zGYz/plmM/5mZjP+M2Yz/gBmM/7/MzP+zDMz/pkzM/9mMzP/MzMz/wAzM///ADP/zAAz/5kA
+        MwBmADMAMwAzBQAAMwX//wD/zP8AzJn/AJlm/wBmM/8AMwD/AAD/zAD/zMwAzJnMAJlmzABmM8wAMwDM
+        AAD/mQD/zJkAzJmZAJlmmQBmM5kAMwCZAAD/ZgD/zGYAzJlmAJlmZgBmM2YAMwBmAAD/MwD/zDMAzJkz
+        AJlmMwBmMzMAMwAzAAD/AAD/zAAAzJkAAJlmAABmMwAAMwAA7gAAAN0AAAC7AAAAqgAAAIgAAAB3AAAA
+        VQAAAEQAAAAiAAAAEQAA7gAAAN0AAAC7AAAAqgAAAIgAAAB3AAAAVQAAAEQAAAAiAAAAEQAA7gAA7t0A
+        AN27AAC7qgAAqogAAIh3AAB3VQAAVUQAAEQiAAAiEQAAEe7u7u7d3d3du7u7u6qqqqqIiIiId3d3d1VV
+        VVVEREREIiIiIhEREREAAAAA////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        //////////////////////z///////////////////////////////////9Ha//7//z8////////////
+        //////////////////9HR0dr//v8//z8/P////////////////////////9HR0dHR2v/+/zc//z8/Pz/
+        //////////////////9HR0dHR0dHa//7/dz//Pz8/Pz///////////////9HR0dHR0dHR0dr//v83P/8
+        /Pz8/P////////////8cR0dHR0dHR0dHR2v//Pzc//z8/Pz//////////////xxHR0dHR0dHR0dHa//7
+        /Nz//Pz/////////////////HEdHR0dHR0dHR0dr//v83P////////////////////8cR0dHR0dHR0dH
+        R2v//Pzc/////////////////////xxHR0dHR0dHR0dHa//7/Nz/////////////////////HEdHR0dH
+        R0dHR0dr//v83P////////////////////8cR0dHR0dHR0dHR2v/+/zc/////////////////////xxH
+        R0dHR0dHR0dHa//8/Nz/////////////////////HEdHR0dHR0dHR0dr//v93P//////////////////
+        //8cR0dHR0dHR0dHR2v/+/zc/////////////////////xxHR0dHR0dHR0dHa//8/Nz/////////////
+        ////////HEdHR0dHR0dHR0f///v83P////////////////////8cR0dHR0dHR0f///f3/fzc////////
+        /////////////xxHR0dHR0f///f3+fn399z/////////////////////HEdHR0f///f3+fn399zc////
+        //////////////////8cR0f///f3+fn399zc/////////////////////////xz///f3+fn399zc////
+        /////////////////////////939+fn399zc/////////////////////////////////939+9zc////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////wf///wB///wAH//wAAf/wAAD/wAAA/4A
+        AAf+AAAf/gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAAf/4AAH/+AAB//gAA//4A
+        Af/+AAf//wAf//8Af///gf//////////////////
+</value>
+  </data>
 </root>
